--- a/Cununia noastră civilă.html
+++ b/Cununia noastră civilă.html
@@ -94,7 +94,7 @@
             <div class="container spacer-one-bottom-lg">
                 <div class="row justify-content-center">
                     <div class="col">
-                        <div class=" text-center mb-5 pb-5">
+                        <div class="text-center pb-3">
                             <h1 class="display-4 mb-0">
                                                                     Oamenii de suflet                                                              </h1>
                             <p class="w-md-40 mb-0 mx-auto text-dark-gray opacity-8 ">
@@ -111,11 +111,10 @@
                               </svg>
                     </div>
                     <div class="col-lg-12 text-center">
-                        <div class="mb-3 pb-3">
-                            <h5 class="mb-0"> Împreună cu nașii</h5>
+                        <div class="pt-3">
                             <div class="divided">
-                                <span class="small text-dark-gray opacity-8">Alexandru și Ioana Rad-Popa</span>
-                                <span class="small text-dark-gray opacity-8">Bogdan Bucevschi și Miriam Jaradat</span>
+                                <span class="small text-dark-gray opacity-8 left">Alexandru și Ioana Rad-Popa</span>
+                                <span class="small text-dark-gray opacity-8 right">Bogdan Bucevschi și Miriam Jaradat</span>
                             </div>
                         </div>
                     </div>
