--- a/andreisipaula.html
+++ b/andreisipaula.html
@@ -8,9 +8,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Inconsolata:wght@200;300&family=Space+Mono&family=WindSong&family=Zeyada&display=swap" rel="stylesheet">
-        <link href="./Cununia noastră civilă_files/bootstrap.css" rel="stylesheet" type="text/css" media="all">
-        <link href="./Cununia noastră civilă_files/main2.css" rel="stylesheet" type="text/css" media="all">
-        <link href="./Cununia noastră civilă_files/custom.css" rel="stylesheet" type="text/css" media="all">
+        <link href="./andreisipaula/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+        <link href="./andreisipaula/main2.css" rel="stylesheet" type="text/css" media="all">
+        <link href="./andreisipaula/custom.css" rel="stylesheet" type="text/css" media="all">
 
         <meta name="robots" content="noindex">
 
@@ -38,7 +38,7 @@
             </div>
         </header>
         <section class="gradient-overlay gradient-overlay-dark ">
-            <img class="bg-image" src="./Cununia noastră civilă_files/background copy.png" alt="">
+            <img class="bg-image" src="./andreisipaula/background copy.png" alt="">
             <div class="container">
                 <div class="row min-vh-80 align-items-center z-index-2 position-relative">
                     <div class="col-12">
@@ -63,7 +63,7 @@
                 <div class="row justify-content-lg-between align-items-center">
 
                     <div class="col-md-6">
-                        <img src="./Cununia noastră civilă_files/img1.png" style="width:100%">
+                        <img src="./andreisipaula/img1.png" style="width:100%">
                         </div>
                         <div class="col-md-6 mb-5 mb-md-0">
                             <div class="pr-md-4 text-center">
@@ -151,7 +151,7 @@
                                     Cluj-Napoca
                                 </p>
                                 <div class="mb-5 mb-md-5 events-img-wrapper">
-                                    <img src="./Cununia noastră civilă_files/harta_ceremonie.png">
+                                    <img src="./andreisipaula/harta_ceremonie.png">
                                 </div>
                             </div>
                         </div>
@@ -167,7 +167,7 @@
                                 Cluj-Napoca                                <br>
                             </p>
                             <div class="mb-5 mb-md-5 events-img-wrapper">
-                                <img src="./Cununia noastră civilă_files/harta_petrecere.png">
+                                <img src="./andreisipaula/harta_petrecere.png">
                             </div>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
 
         
         <section class="gradient-overlay spacer-one-top-lg o-hidden">
-            <img class="bg-image" src="./Cununia noastră civilă_files/background2.jpeg" alt="">
+            <img class="bg-image" src="./andreisipaula/background2.jpeg" alt="">
             <div class="container">
                 <div class="row  min-vh-80 align-items-center z-index-2 position-relative text-center">
                 </div>
@@ -234,8 +234,8 @@
             </svg>
         </a>
     </div>
-    <script src="./Cununia noastră civilă_files/jquery-1.12.4.min.js.download"></script>
-    <script src="./Cununia noastră civilă_files/smooth-scroll.js.download"></script>
+    <script src="./andreisipaula/jquery-1.12.4.min.js.download"></script>
+    <script src="./andreisipaula/smooth-scroll.js.download"></script>
     <script>
         !function (a) {
             "use strict";
