--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
     <div class="wrapper" id="wrapper">
-        <header class="header switched-header" style="display: block;">
+        <header class="header switched-header">
             <div class="header-section">
                 <div class="container-fluid ">
                     <nav class="navbar navbar-expand-lg header-navbar ml-0 ml-lg-5">
@@ -37,7 +37,7 @@
                 </div>
             </div>
         </header>
-        <section class="gradient-overlay gradient-overlay-dark ">
+        <section class="gradient-overlay-dark ">
             <img class="bg-image" src="./andreisipaula/background copy.png" alt="">
             <div class="container">
                 <div class="row min-vh-80 align-items-center z-index-2 position-relative">
@@ -66,12 +66,11 @@
                         <img src="./andreisipaula/img1.png" style="width:100%">
                         </div>
                         <div class="col-md-6 mb-5 mb-md-0">
-                            <div class="pr-md-4 text-center">
+                            <div class="pr-md-4 text-center pt-3">
                                 <h1 class="font-secondary display-4">
                                                                         Ne căsătorim!                                                            </h1>
-                                <p class="lead font-weight-300 text-dark-gray opacity-8">
-                                                                        Te invităm la cununia noastră civilă!                                                            </p>
-                                <p class="mb-4">
+                                <p>
+                                                                        Te invităm la cununia noastră civilă!<br>
                                                                         Ne dorim din suflet să ne poți fi alături pentru a marca această zi importantă. </p>
                               
                             </div>
@@ -172,17 +171,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <div class=" text-center mt-5 pt-5">
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
 
         
-        <section class="gradient-overlay spacer-one-top-lg o-hidden">
+        <section class="spacer-one-top-lg o-hidden">
             <img class="bg-image" src="./andreisipaula/background2.jpeg" alt="">
             <div class="container">
                 <div class="row  min-vh-80 align-items-center z-index-2 position-relative text-center">
