added lazy loading for images

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="row justify-content-lg-between align-items-center">
 
                     <div class="col-md-6">
-                        <img src="./andreisipaula/img1.png" style="width:100%">
+                        <img src="./andreisipaula/img1.png" style="width:100%" loading="lazy">
                         </div>
                         <div class="col-md-6 mb-5 mb-md-0">
                             <div class="pr-md-4 text-center pt-3">
@@ -150,7 +150,7 @@
                                     Cluj-Napoca
                                 </p>
                                 <div class="mb-5 mb-md-5 events-img-wrapper">
-                                    <img src="./andreisipaula/harta_ceremonie.png">
+                                    <img src="./andreisipaula/harta_ceremonie.png" loading="lazy">
                                 </div>
                             </div>
                         </div>
@@ -166,7 +166,7 @@
                                 Cluj-Napoca                                <br>
                             </p>
                             <div class="mb-5 mb-md-5 events-img-wrapper">
-                                <img src="./andreisipaula/harta_petrecere.png">
+                                <img src="./andreisipaula/harta_petrecere.png" loading="lazy">
                             </div>
                         </div>
                     </div>
@@ -176,7 +176,7 @@
 
         
         <section class="spacer-one-top-lg o-hidden">
-            <img class="bg-image" src="./andreisipaula/background2.jpeg" alt="">
+            <img class="bg-image" src="./andreisipaula/background2.jpeg" alt="" loading="lazy">
             <div class="container">
                 <div class="row  min-vh-80 align-items-center z-index-2 position-relative text-center">
                 </div>
