--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                 </div>
             </div>
         </header>
-        <section class="gradient-overlay-dark ">
+        <section class="gradient-overlay-dark introduction">
             <img class="bg-image" src="./andreisipaula/background copy.png" alt="">
             <div class="container">
                 <div class="row min-vh-80 align-items-center z-index-2 position-relative">
                     <div class="col-12">
                         <h1 class="display-2  text-white mb-4 nume">Andrei și Paula</h1>
-                        <p class="font-weight-300 text-light  lead mb-5 ">5 Septembrie 2021 - Cluj-Napoca </p>
+                        <p class="font-weight-300 text-light lead mb-5 data">5 Septembrie 2021 - Cluj-Napoca </p>
                     </div>
                 </div>
             </div>
