more changes to front page

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </header>
         <section class="gradient-overlay-dark introduction">
             <img class="bg-image" src="./andreisipaula/background copy.png" alt="">
-            <div class="container">
-                <div class="row min-vh-80 align-items-center z-index-2 position-relative">
+            <div class="container title-text">
+                <div class="row min-vh-80 align-items-center z-index-2 position-relative ">
                     <div class="col-12">
                         <h1 class="display-2  text-white mb-4 nume">Andrei și Paula</h1>
                         <p class="font-weight-300 text-light lead mb-5 data">5 Septembrie 2021 - Cluj-Napoca </p>
@@ -57,8 +57,16 @@
                                     </g>
                 </svg>
             </div>
+           
         </section>
         <section id="resto" class=" ">
+            <div class="row align-items-center pl-4 pr-4 title-text-replacement">
+                    <div class="col-12">
+                        <h1 class="mb-1 nume">Andrei și Paula</h1>
+                        <p class="font-weight-300 lead mb-5 data">5 Septembrie 2021 - Cluj-Napoca </p>
+                    </div>
+            </div>
+   
             <div class="container spacer-double-lg">
                 <div class="row justify-content-lg-between align-items-center">
 
