--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section id="resto" class=" ">
             <div class="row align-items-center pl-4 pr-4 title-text-replacement">
                     <div class="col-12">
-                        <h1 class="mb-1 nume">Andrei și Paula</h1>
+                        <h1 class="pt-5 mb-1 nume">Andrei și Paula</h1>
                         <p class="font-weight-300 lead mb-5 data">5 Septembrie 2021 - Cluj-Napoca </p>
                     </div>
             </div>
