--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
         
         <section class="spacer-one-top-lg o-hidden">
-            <img class="bg-image" src="./assets/background2.jpeg" alt="" loading="lazy">
+            <img class="bg-image-footer" src="./assets/background2.jpeg" alt="" loading="lazy">
             <div class="container">
                 <div class="row  min-vh-80 align-items-center z-index-2 position-relative text-center">
                 </div>
