--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="ro"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-        <title> Cununia noastră civilă - Andrei și Paula</title>
+        <title> Cununie civilă - Andrei și Paula</title>
         <meta name="author" content="CodeKraft">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="./assets/img2.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Inconsolata:wght@200;300&family=Space+Mono&family=WindSong&family=Zeyada&display=swap" rel="stylesheet">
