--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="row justify-content-lg-between align-items-center">
 
                     <div class="col-md-6">
-                        <img src="./assets/img1.png" style="width:100%" loading="lazy">
+                        <img src="./assets/img1.jpg" style="width:100%" loading="lazy">
                         </div>
                         <div class="col-md-6 mb-5 mb-md-0">
                             <div class="pr-md-4 text-center pt-3">
